fix: 恢复被 merge 覆盖的 MITE API 改写
merge 6ece07a 引入的 upstream commit 6322bf3 把 13 个文件的 MITE API
调用退回了 vanilla Forge 名，导致 compileJava 从通过退回 27 条错误。

已用 build/tmp/mite-named.jar 逐项核实，upstream 的每一处都与实际 jar
相反，全部恢复为 MITE 侧写法：

- World.setBlockMetadataWithNotify -> setBlockMetadata
  （BlockTorchMixin、BlockLeavesMixin、RotationHelper、
   BlockFluidClassic、BlockFluidFinite）
- NetServerHandler.sendPacketToPlayer -> sendPacket
  （ForgeHooks、PacketDispatcher x2、FMLNetworkHandler、NetworkRegistry）
- ServerConfigurationManager.sendToAllNear -> sendPacketToPlayersAroundPoint
- ISaveHandler.getSaveHandler -> getPlayerNBTManager
- TcpConnection.getSocketAddress -> getRemoteAddress
- EntityPlayerMP.incrementWindowID -> getNextWindowId（含 accesswidener）
- EntityTracker.addEntityToTracker -> trackEntity
- ChunkProviderServer.loadedChunkHashMap -> id2ChunkMap

RemapToIntermediary 做合并而非回滚：保留 upstream 新增的 threads()，
恢复被删的输入校验、fixPackageAccess(true)、rebuildSourceFilenames(true)
和输出文件删除。upstream 新增的映射基建（IntermediaryMappingProvider、
ObfuscationServiceFish、MixinRemapper）全部保留。

新增 tools/build-compile.sh：Windows 上 gradle daemon 会锁住 widen.jar
使 applyAccessWidener 的 ant.move 失败，脚本在构建前停 daemon 并清理，
同时把 javac 的 GBK 输出转成 UTF-8 以便读取错误清单。