@@ -5,21 +5,46 @@ import net.fabricmc.tinyremapper.OutputConsumerPath;
 import net.fabricmc.tinyremapper.TinyRemapper;
 import net.fabricmc.tinyremapper.TinyUtils;
 
-import java.io.BufferedReader;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
+/**
+ * Remaps the raw (official/obfuscated namespace) MITE game jar into the
+ * {@code intermediary} namespace that FishModLoader's sources are written
+ * against.
+ *
+ * <p>The bundled {@code intermediary.tiny} is a tiny v1 file declaring
+ * {@code official} then {@code intermediary}, so the remap direction is
+ * official -> intermediary.
+ *
+ * <p>Usage: {@code RemapToIntermediary <inputJar> <outputJar> <intermediary.tiny>}
+ */
 public final class RemapToIntermediary {
+
     public static void main(String[] args) throws IOException {
         if (args.length < 3) {
-            System.err.println("Usage: RemapToIntermediary <input.jar> <output.jar> <intermediary.tiny>");
+            System.err.println("Usage: RemapToIntermediary <inputJar> <outputJar> <intermediaryTiny>");
             System.exit(1);
         }
-        Path inputJar = Paths.get(args[0]);
-        Path outputJar = Paths.get(args[1]);
-        Path mappingsFile = Paths.get(args[2]);
+
+        Path inputJar = Path.of(args[0]);
+        Path outputJar = Path.of(args[1]);
+        Path mappingsFile = Path.of(args[2]);
+
+        if (!Files.exists(inputJar)) {
+            System.err.println("Input jar not found: " + inputJar);
+            System.exit(1);
+        }
+        if (!Files.exists(mappingsFile)) {
+            System.err.println("Mapping file not found: " + mappingsFile);
+            System.exit(1);
+        }
+
+        if (outputJar.getParent() != null) {
+            Files.createDirectories(outputJar.getParent());
+        }
+        Files.deleteIfExists(outputJar);
 
         System.out.println("Remapping " + inputJar + " -> " + outputJar);
         System.out.println("  Source namespace: official");
@@ -30,6 +55,13 @@ public final class RemapToIntermediary {
                 .withMappings(TinyUtils.createTinyMappingProvider(
                         Files.newBufferedReader(mappingsFile), "official", "intermediary"))
                 .ignoreConflicts(true)
+                // MITE keeps many classes in the default package where protected
+                // access is legal; intermediary splits them across packages, which
+                // makes those accesses illegal. This repairs the resolvable subset.
+                // (It cannot repair the JVMS 4.10.1.8 verifier rule -- those need
+                // an AccessWidener entry instead; see HANDOFF.md.)
+                .fixPackageAccess(true)
+                .rebuildSourceFilenames(true)
                 .threads(Runtime.getRuntime().availableProcessors())
                 .build();
 
@@ -40,11 +72,12 @@ public final class RemapToIntermediary {
                 remapper.apply(outputConsumer);
             }
         } catch (IOException e) {
-            throw new RuntimeException("Failed to remap jar", e);
+            throw new RuntimeException("Failed to remap MITE jar to intermediary", e);
         } finally {
             remapper.finish();
         }
 
-        System.out.println("Done. Remapped jar written to " + outputJar);
+        System.out.println("Remapped " + inputJar.getFileName()
+                + " (official) -> " + outputJar + " (intermediary)");
     }
 }
